<resources>
    <string name="app_name">有钱</string>
    <string name="title">标题</string>
    <string name="date">时间</string>
    <string name="classes">类别</string>
    <string name="cost">花费</string>
    <string name="submit">提交</string>
    <string name="zhichu">支出</string>
    <string name="shouru">收入</string>
    <string name="clear">清空</string>
    <string name="record_again">再记一笔</string>
    <string name="detail">备注...</string>
    <string name="liushui">流水</string>
    <string name="zhanghu">账户</string>
    <string name="tubiao">图表</string>
    <string name="jisuan">计算</string>
    <string name="qita">其他</string>
    <string name="default_Book">默认账本</string>
    <string name="familyBook">家庭账本</string>
    <string name="myname">钟浩伟</string>
    <string name="weidenglu">未登录</string>
    <string name="mybook">我的账本</string>
    <string name="classes2">类别2</string>
    <string name="classes1">类别1</string>
    <string name="add_record">增加记录</string>
    <string name="menu">菜单</string>
    <string name="empty_tint">本来无一物,何处惹尘埃</string>
    <string name="jingzichan">净资产</string>
    <string name="zichan">资产</string>
    <string name="fuzhai">负债</string>
    <string name="count">账户</string>
    <string name="cash">现金(CNY)</string>
    <string name="zhifuzhanghu">支付账户</string>
    <string name="jieyu">结余</string>
    <string name="zonge">总额</string>
    <string name="liuru">流入</string>
    <string name="liuchu">流出</string>
    <string name="budget_type">预算类型</string>
    <string name="budget">预算</string>
    <string name="jinequjian">金额区间</string>
    <string name="start_date">开始时间</string>
    <string name="end_date">结束时间</string>
    <string name="all">全部</string>
</resources>
