<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.Activity.ViewPagerRecordActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:background="@color/white"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            popupTheme="@style/PopWindowBackgroundStyle"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="¥"
                android:textSize="40sp"/>
        <EditText
            android:id="@+id/cost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="00.00"
            android:textSize="40sp"
            android:layout_weight="9"
            android:numeric="decimal"
            android:singleLine="true"
            />

            <android.support.v7.widget.CardView
                android:id="@+id/photo_img"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                >

                <ImageView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/takephoto"
                    android:scaleType="fitCenter"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/classes_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/classes" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:layout_margin="5dp"
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:textSize="17sp"/>
                <TextView
                    android:layout_margin="5dp"
                    android:text=">"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_margin="5dp"
                    android:id="@+id/classes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/classes"
                    android:textSize="17sp"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
        <TextView
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            />
        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:layout_margin="5dp"
            android:textSize="17sp"
            />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>
        </LinearLayout>
        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_gravity="right">
            <RadioButton
                android:id="@+id/radio_shouru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shouru"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"/>
            <RadioButton
                android:id="@+id/radio_zhichu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zhichu"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:checked="true"/>
        </RadioGroup>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp">

            <EditText
                android:id="@+id/detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:gravity="left|top"
                android:hint="@string/detail"
                android:inputType="textMultiLine"
                android:minLines="3"
                app:layout_constraintBottom_toTopOf="@+id/record_again_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <Button
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/clear"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/record_again_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/record_again"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/submit_button"
                app:layout_constraintStart_toEndOf="@+id/clear_button" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>