<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    android:id="@+id/root_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:clickable="true"
    android:layout_height="45dp">

    <com.guanaj.easyswipemenulibrary.EasySwipeMenuLayout
        android:id="@+id/easySwipeMenuLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:contentView="@+id/content"
        app:rightMenuView="@+id/right"
        >

        <LinearLayout
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/delete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/delete"
                android:clickable="true"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />

        </LinearLayout>



<LinearLayout
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="70dp"
    android:layout_height="match_parent"
    android:gravity="center">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/classes_img"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/cloth"
         />
</LinearLayout>

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="0dp"
        android:gravity="left">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <TextView
                android:textColor="@color/black"
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title"
                android:textAllCaps="false"
                android:visibility="gone"
                />

            <TextView
                android:textColor="@color/black"
                android:text="—"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <TextView
                android:textColor="@color/black"
                android:id="@+id/classes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/classes"
                 />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:gravity="center">
            <TextView
                android:textSize="10dp"
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="23:51"
                />


            <TextView
                android:textSize="10dp"
                android:paddingLeft="5dp"
                android:id="@+id/count_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash"
                />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/cost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:layout_marginEnd="10dp"
            android:text="@string/cost"
            android:textColor="@color/zumulv"
            android:textSize="16sp"
            android:paddingBottom="14dp"
            />

    </LinearLayout>
</LinearLayout>



    </com.guanaj.easyswipemenulibrary.EasySwipeMenuLayout>
</LinearLayout>