<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clipToPadding="true"
    >


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MergeRootFrame"
        >


        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="100dp">



            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsingToolBar"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:contentScrim="@color/cool_green_normal"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:toolbarId="@+id/toolbar"
                app:expandedTitleMargin="20dp"
                >



                <ImageView
                    android:id="@+id/toolbar_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/bg2"/>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    popupTheme="@style/PopWindowBackgroundStyle"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_alignParentTop="true"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
                </android.support.v7.widget.Toolbar>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="pin"
                    >
                    <!--选项卡-->
                    <android.support.design.widget.TabLayout
                        android:id="@+id/tabLayout"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        app:tabIndicatorColor="@android:color/white"
                        android:layout_alignParentBottom="true"
                        app:tabMode="fixed"
                        app:tabSelectedTextColor="@android:color/white"
                        app:tabTextColor="@color/colorBarText" />
                </RelativeLayout>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>


        <!--只允许一个子布局,因此用LinearLayout包裹-->
        <!--适配viewpager-->
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:fillViewport="true"
            android:layout_marginTop="20dp">

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                >




                <LinearLayout
                    android:id="@+id/classes_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:clickable="true"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginLeft="15dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="11sp"
                            android:text="@string/classes" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_marginTop="5dp"
                                android:id="@+id/title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="食品酒水"
                                android:textColor="@color/black"
                                android:textSize="17sp"/>
                            <TextView
                                android:layout_marginTop="5dp"
                                android:text=" > "
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="17dp"
                                android:textColor="@color/gray_color"/>

                            <TextView
                                android:layout_marginTop="5dp"
                                android:id="@+id/classes"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="早午晚餐"
                                android:textColor="@color/black"
                                android:textSize="17sp"/>

                        </LinearLayout>

                        <View
                            android:layout_marginTop="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="0.8dp"
                            android:background="@color/Bisque"
                            />
                    </LinearLayout>

                </LinearLayout>



                <LinearLayout
                    android:id="@+id/countType_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginLeft="15dp"
                        android:textSize="11sp"
                        android:text="@string/count" />

                    <TextView
                        android:id="@+id/count_type"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:text="@string/cash"/>


                    <View
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="0.8dp"
                        android:background="@color/Bisque"
                        />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/start_date_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginLeft="15dp"
                        android:textSize="11sp"
                        android:text="@string/start_date" />

                    <TextView
                        android:id="@+id/start_date"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:text="@string/cash"/>

                    <View
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="0.8dp"
                        android:background="@color/Bisque"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/end_date_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginLeft="15dp"
                        android:textSize="11sp"
                        android:text="@string/end_date" />

                    <TextView
                        android:id="@+id/end_date"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:text="@string/cash"/>

                    <View
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="0.8dp"
                        android:background="@color/Bisque"
                        />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp"
                    android:gravity="right">
                    <RadioGroup
                        android:id="@+id/radio_group"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:text="@string/shouru"
                            android:id="@+id/shouru_rb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <RadioButton
                            android:text="@string/zhichu"
                            android:id="@+id/zhichu_rb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <RadioButton
                            android:text="@string/all"
                            android:id="@+id/all_rb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </RadioGroup>
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/fuck"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="30dp">
                        <Button
                            android:id="@+id/clear_button"
                            android:background="@drawable/shape1"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="清空"
                            android:layout_marginRight="20dp"
                            android:layout_marginLeft="20dp"
                            android:textColor="@color/white"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/submit_button"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:text="查询"
                            android:background="@drawable/shape"/>
                    </LinearLayout>
                </RelativeLayout>


            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>



</LinearLayout>